feat: 添加作者文章列表功能，修复搜索的高亮显示
